--- a/.github/workflows/matrix.yaml
+++ b/.github/workflows/matrix.yaml
@@ -26,10 +26,9 @@ jobs:
       matrix:
         os: [os-1, os-2]
         pyversion: [pyv-1, pyv-2]
-        full: [true]
         include:
         - os: os-1
-          pyversion: pyv-3
+          full: [true, false]
 
     steps:
     - name: Info
