formatting for array
Signed-off-by: Nick Papior <nickpapior@gmail.com>

--- a/.github/workflows/matrix.yaml
+++ b/.github/workflows/matrix.yaml
@@ -26,7 +26,7 @@ jobs:
       matrix:
         os: [os-1, os-2]
         pyversion: [pyv-1, pyv-2]
-        full: true
+        full: [true]
         include:
         - os: os-1
           full: false
